@@ -8,6 +8,9 @@ CHANGES
 
 * Issue #41: Dropped support for Python 2.4 and Python 2.5. Clients requiring
   setuptools for those versions of Python should use setuptools 1.x.
+* Removed ``setuptools.command.easy_install.HAS_USER_SITE``. Clients
+  expecting this boolean variable should use ``site.ENABLE_USER_SITE``
+  instead.
 
 -----
 1.4.1
